--- a/Products_folder/product-details.html
+++ b/Products_folder/product-details.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details Page</title>
+
+    <!-- Link naar de CSS sheet -->
+    <link rel="stylesheet" href="/Homepage_stylesheet.css">
+
+        <!-- Navigatie bar -->
+    <ul>
+    <li style="float:left"><a class="active" href="Homepage_folder/Homepage.html">Home</a></li>
+    <li><a href="/Products_folder/main_products_page.html">Products</a></li>
+    <li><a href="/Login_folder/Login_screen.html">Login</a></li>
+    <li><a href="/Login_folder/registratiescherm.html">Registration</a></li>
+    <li><a href="/FAQ/FAQ.html">FAQ</a></li>
+    </ul>
 </head>
 
 <body>
