--- a/Products_folder/main_products_page.html
+++ b/Products_folder/main_products_page.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products Page</title>
+
+    <!-- Link naar de CSS sheet -->
+    <link rel="stylesheet" href="/Homepage_stylesheet.css">
+
+        <!-- Navigatie bar -->
+    <ul>
+    <li style="float:left"><a class="active" href="Homepage_folder/Homepage.html">Home</a></li>
+    <li><a href="/Products_folder/main_products_page.html">Products</a></li>
+    <li><a href="/Login_folder/Login_screen.html">Login</a></li>
+    <li><a href="/Login_folder/registratiescherm.html">Registration</a></li>
+    <li><a href="/FAQ/FAQ.html">FAQ</a></li>
+    </ul>
+
     <style>
         /* Simple styling for the product grid */
         .product-grid {
@@ -66,39 +78,4 @@
         window.onload = showAllProducts;
     </script>
 </body>
-=======
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/Homepage_folder/Homepage_stylesheet.css">
-    </head>
-
-    <body>
-        <h1> Products page </h1>
-        <div id="product-container">
-
-        </div>
-        <script>
-            function showProductDetails(productId) {
-            // Use AJAX to fetch product details from the server (using PHP/MySQL)
-            // Update the content of the product-container based on the response
-            // Example using fetch API:
-            
-            fetch('get_product_details.php?id=' + productId)
-                .then(response => response.json())
-                .then(data => {
-
-                    // Update the HTML content with the product details
-                    document.getElementById('product-container').innerHTML = `
-                        <h2>${data.productName}</h2>
-                        <p>${data.description}</p>
-                        <p>Price: ${data.price}</p>
-                        <!-- Add more details as needed -->
-                    `;
-                })
-                .catch(error => console.error('Error:', error));
-        }
-        </script>
-    </body>
->>>>>>> origin/Login
 </html>
