--- a/Login_folder/Registratiescherm.html
+++ b/Login_folder/Registratiescherm.html
@@ -13,7 +13,7 @@
     </head>
     <body>
                     <hr>
-                        <form action="/Login_folder/add_user.php" method="post"></form>
+                        <form action="/Login_folder/add_user.php" method="post">
                             <h1> REGISTER </h1>
                             <div class="login-box">
 
