linkjes in klantenservice werkend maken

--- a/Homepage_folder/Homepage.html
+++ b/Homepage_folder/Homepage.html
@@ -120,7 +120,9 @@ function showSlides(n) {
           <br>
           <a href="Delivery.html">Delivery information</a>
           <br>
-          <a href="Contact.html">Contact</a>
+          <a href="Returns.html">Returns and refund policy</a>
+          <br>
+          <a href="contact.html">Contact</a>
         </p>
     </div>
   </div>
