index (homepage) updaten

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <!-- Link naar de CSS sheet -->
     <link rel="stylesheet" href="Homepage_stylesheet.css">
+
+    <!-- Link voor icoontjes -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title> Homepage </title>
-      <!-- Navigatie bar -->
+      
+    <!-- Navigatie bar -->
   <ul>
-    <li style="float:left"><a class="active" href="Homepage_folder/Homepage.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="Products_folder/main_products_page.html">Products</a></li>
     <li><a href="Login_folder/Login_screen.html">Login</a></li>
-    <li><a href="Login_folder/Registratiescherm.html">Registration</a></li>
-    <li><a href="FAQ/FAQ.html">FAQ</a></li>
+    <li><a href="Login_folder/registratiescherm.html">Registration</a></li>
   </ul>
+
   </head>
 
 
@@ -104,7 +108,11 @@ function showSlides(n) {
     <div class="column">
       <br> <br>
         <h3>Follow us!</h3>
-        <p>Social media linkjes</p>
+        <p><a href="http://www.instagram.com/" ><i class="fa fa-instagram" style="font-size:24px"></i></a>
+          <a href="https://www.facebook.com" ><i class="fa fa-facebook" style="font-size:24px"></i></a>
+          <a href="https://www.linkedin.com" ><i class="fa fa-linkedin" style="font-size:24px"></i></a>
+        
+        </p>
         <br> <br>
         <h3>Costumerservice</h3>
         <p class="links">
@@ -112,7 +120,9 @@ function showSlides(n) {
           <br>
           <a href="Delivery.html">Delivery information</a>
           <br>
-          <a href="Contact.html">Contact</a>
+          <a href="Returns.html">Returns and refund policy</a>
+          <br>
+          <a href="contact.html">Contact</a>
         </p>
     </div>
   </div>
