--- a/Login_folder/Login_screen.html
+++ b/Login_folder/Login_screen.html
@@ -4,13 +4,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Login_stylesheet.css">
         <link rel="javascript" href="login_scherm.js">
+        <!-- Navigatie bar -->
         <ul>
-            <li ><a href="Homepage_folder/Homepage.html">Home</a></li>
-            <li><a href="/Products_folder/main_products_page.php">Products</a></li>
-            <li style="float:left"><a class="active" href="Login_folder/Login_screen.html">Login</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Products_folder/main_products_page.php">Products</a></li>
+            <li><a href="Login_folder/Login_screen.html">Login</a></li>
             <li><a href="Login_folder/registratiescherm.html">Registration</a></li>
-            <li><a href="FAQ/FAQ.html">FAQ</a></li>
-          </ul>
+        </ul>
     </head>
 
     <body>
