--- a/Login_folder/Registratiescherm.html
+++ b/Login_folder/Registratiescherm.html
@@ -3,13 +3,13 @@
     <head>
         <link rel="stylesheet" href="Login_stylesheet.css">
         <link rel="javascript" href="login_scherm.js">
-        <ul>
-            <li ><a href="Homepage_folder/Homepage.html">Home</a></li>
-            <li><a href="Products_folder/main_products_page.html">Products</a></li>
-            <li><a  href="Login_folder/Login_screen.html">Login</a></li>
-            <li style="float:left"><a class="active" href="Login_folder/registratiescherm.html">Registration</a></li>
-            <li><a href="FAQ/FAQ.html">FAQ</a></li>
-          </ul>
+      <!-- Navigatie bar -->
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Products_folder/main_products_page.php">Products</a></li>
+        <li><a href="Login_folder/Login_screen.html">Login</a></li>
+        <li><a href="Login_folder/registratiescherm.html">Registration</a></li>
+      </ul>
     </head>
     <body>
                     <hr>
