--- a/FAQ/FAQ.html
+++ b/FAQ/FAQ.html
@@ -10,10 +10,10 @@
 
         <!-- Navigatie bar -->
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Products_folder/main_products_page.php">Products</a></li>
-            <li><a href="Login_folder/Login_screen.html">Login</a></li>
-            <li><a href="Login_folder/registratiescherm.html">Registration</a></li>
+            <li class="navbar_list"><a href="index.html">Home</a></li>
+            <li class="navbar_list"><a href="Products_folder/main_products_page.php">Products</a></li>
+            <li class="navbar_list"><a href="Login_folder/Login_screen.html">Login</a></li>
+            <li class="navbar_list"><a href="Login_folder/registratiescherm.html">Registration</a></li>
         </ul>
 
         <style>
