submit buttton nametag added

--- a/Login_folder/Registratiescherm.html
+++ b/Login_folder/Registratiescherm.html
@@ -13,7 +13,7 @@
     </head>
     <body>
                     <hr>
-                        <form action="add_user.php" method="post">
+                        <form action="add_user.php" method="post" id="regForm">
                             <h1> REGISTER </h1>
                             <div class="login-box">
 
@@ -53,7 +53,7 @@
                                 <div style="overflow:auto;">
                                     <div style="float:right;">
                                       <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
-                                      <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+                                      <input type="button" id="nextBtn" onclick="nextPrev(1)" name="submit">Next</button>
                                     </div>
                                   </div>
                                   <!-- Circles which indicates the steps of the form: -->
