Changing the navbar to be correct

--- a/FAQ/FAQ.html
+++ b/FAQ/FAQ.html
@@ -7,13 +7,14 @@
         <!-- Link naar de CSS sheet -->
         <link rel="stylesheet" href="FAQ.css">
         <title> FAQ </title>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/Homepage_stylesheet.css">
         <!-- Navigatie bar -->
         <ul>
-            <li class="navbar_list"><a href="index.html">Home</a></li>
-            <li class="navbar_list"><a href="Products_folder/main_products_page.php">Products</a></li>
-            <li class="navbar_list"><a href="Login_folder/Login_screen.html">Login</a></li>
-            <li class="navbar_list"><a href="Login_folder/registratiescherm.html">Registration</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../Products_folder/main_products_page.php">Products</a></li>
+            <li><a href="../Login_folder/Login_screen.html">Login</a></li>
+            <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
         </ul>
 
         <style>
