--- a/FAQ/Delivery.html
+++ b/FAQ/Delivery.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <title> Delivery information </title>
-        <!-- Navigatie bar -->
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Products_folder/main_products_page.php">Products</a></li>
-            <li><a href="Login_folder/Login_screen.html">Login</a></li>
-            <li><a href="Login_folder/registratiescherm.html">Registration</a></li>
-        </ul>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/Homepage_stylesheet.css">
+    <!-- Navigatie bar -->
+    <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Products_folder/main_products_page.php">Products</a></li>
+        <li><a href="../Login_folder/Login_screen.html">Login</a></li>
+        <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
+    </ul>
 </head>
 
 <body>
