--- a/FAQ/contact.html
+++ b/FAQ/contact.html
@@ -3,11 +3,14 @@
 <head>
     <title> Contact </title>
         <!-- Navigatie bar -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="Login_stylesheet.css">
+        <link rel="javascript" href="login_scherm.js">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Products_folder/main_products_page.php">Products</a></li>
-            <li><a href="Login_folder/Login_screen.html">Login</a></li>
-            <li><a href="Login_folder/registratiescherm.html">Registration</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../Products_folder/main_products_page.php">Products</a></li>
+            <li><a href="../Login_folder/Login_screen.html">Login</a></li>
+            <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
         </ul>
 </head>
 
