--- a/Login_folder/Registratiescherm.html
+++ b/Login_folder/Registratiescherm.html
@@ -5,10 +5,10 @@
         <link rel="javascript" href="login_scherm.js">
       <!-- Navigatie bar -->
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Products_folder/main_products_page.php">Products</a></li>
-        <li><a href="Login_folder/Login_screen.html">Login</a></li>
-        <li><a href="Login_folder/registratiescherm.html">Registration</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Products_folder/main_products_page.php">Products</a></li>
+        <li><a href="../Login_folder/Login_screen.html">Login</a></li>
+        <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
       </ul>
     </head>
     <body>
