--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       
     <!-- Navigatie bar -->
   <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="Products_folder/main_products_page.php">Products</a></li>
-    <li><a href="Login_folder/Login_screen.html">Login</a></li>
-    <li><a href="Login_folder/registratiescherm.html">Registration</a></li>
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="../Products_folder/main_products_page.php">Products</a></li>
+    <li><a href="../Login_folder/Login_screen.html">Login</a></li>
+    <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
   </ul>
 
   </head>
