The navbar now works correctly on all screens

--- a/Login_folder/registratiescherm.html
+++ b/Login_folder/registratiescherm.html
@@ -6,7 +6,7 @@
       <!-- Navigatie bar -->
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="../Products_folder/main_products_page.php">Products</a></li>
+        <li><a href="../Products_folder/main_products_page.html">Products</a></li>
         <li><a href="../Login_folder/Login_screen.html">Login</a></li>
         <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
       </ul>
