--- a/FAQ/contact.html
+++ b/FAQ/contact.html
@@ -8,7 +8,7 @@
         <link rel="javascript" href="login_scherm.js">
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="../Products_folder/main_products_page.php">Products</a></li>
+            <li><a href="../Products_folder/main_products_page.html">Products</a></li>
             <li><a href="../Login_folder/Login_screen.html">Login</a></li>
             <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
         </ul>
