adding FAQ to the navbar

--- a/FAQ/contact.html
+++ b/FAQ/contact.html
@@ -11,6 +11,7 @@
             <li><a href="../Products_folder/main_products_page.html">Products</a></li>
             <li><a href="../Login_folder/Login_screen.html">Login</a></li>
             <li><a href="../Login_folder/registratiescherm.html">Registration</a></li>
+            <li><a href="../FAQ/FAQ.html">FAQ</a></li>
         </ul>
 </head>
 
