fixing the php connection

--- a/Products_folder/main_products_page.html
+++ b/Products_folder/main_products_page.html
@@ -108,7 +108,7 @@
 
                         // Create the product price for the grid
                         const priceElement = document.createElement('p');
-                        priceElement.textContent = `Price: $${product.ProductPrice.toFixed(2)}`;
+                        priceElement.textContent = `Price: $${product.ProductPrice}`;
 
                         // Add all the elements to the figure and figure to the grid
                         figCaption.appendChild(headingElement);
